feat(gradle): update gradle config.